[refactor]: product router and swagger
