# src/model/db/Product.js
@@ -4,25 +4,25 @@ class Product {
     /**
      * 
      * @param {String} name 
-     * @param {Number} points 
      * @param {String} category 
      * @param {String} imageURL 
      * @param {Number} stock 
      * @param {String} expiredDate 
      * @param {Boolean} isOnline 
      * @param {Boolean} isAvailable 
-     * @param {Array<Relation>} exchangeRelations 
+     * @param {String} pointValue
+     * @param {String} pointRequired
      */
-    constructor(name, points, category, imageURL, stock, expiredDate, isOnline, isAvailable, exchangeRelations) {
+    constructor(name, category, imageURL, stock, expiredDate, pointValue, pointRequired, isOnline, isAvailable) {
         this.name = name
         this.stock = stock
-        this.points = points
         this.category = category
         this.imageURL = imageURL
         this.isOnline = isOnline
         this.isAvailable = isAvailable
         this.expiredDate = expiredDate
-        this.exchangeRelations = exchangeRelations
+        this.pointValue = pointValue
+        this.pointRequired = pointRequired
     }
 }
 
